--- a/.gitignore
+++ b/.gitignore
@@ -177,3 +177,8 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+
+# API Backend specific
+api/browser_data/
+api/.browserbase_context
+api/cookies*.json
