Add marketplace functionality and Stripe integration
- Add marketplace page with video browsing and filtering
- Implement Stripe payment integration with webhooks
- Add purchase success/failure pages
- Create marketplace components (MarketplaceClient, MarketplaceVideoCard, etc.)
- Add search and filter functionality
- Update video upload and display components
- Add Stripe setup documentation

--- a/env.example
+++ b/env.example
@@ -19,3 +19,11 @@ AWS_SECRET_ACCESS_KEY=your_secret_access_key_here
 AWS_S3_BUCKET_NAME=your_bucket_name_here
 # SQS queue URL to publish new video jobs (e.g., https://sqs.us-east-1.amazonaws.com/123456789012/queue-name)
 AWS_SQS_URL=
+
+# Stripe Payment Processing
+# Get these from your Stripe Dashboard: https://dashboard.stripe.com/apikeys
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key_here
+# Webhook endpoint secret for verifying webhook signatures
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
+
